--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prepare": "husky install",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx}\"",
     "type-check": "tsc --pretty --noEmit",
     "lint": "eslint ./ --ext js,jsx,ts,tsx --fix"
@@ -30,6 +31,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^31.0.0",
+    "husky": "^6.0.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   }
